src/objects/RemoteInvocation__e.object
<CustomObject>
    <description>Platform event published when a Remote Invocation is created, updated, deleted or undeleted</description>
    <fields>
        <fullName>EventType__c</fullName>
        <label>EventType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Remote Invocation PE</label>
    <pluralLabel>Remote Invocations PE</pluralLabel>
</CustomObject>